--- a/wp-content/themes/airbnb-theme/sass/base/elements/_body.scss
+++ b/wp-content/themes/airbnb-theme/sass/base/elements/_body.scss
@@ -1,3 +1,5 @@
+@use "../../abstracts/variables/colors" as *;
+
 body {
 	background: $color__background-body; // Fallback for when there is no custom background color defined.
 }
