--- a/wp-content/themes/airbnb-theme/sass/base/typography/_typography.scss
+++ b/wp-content/themes/airbnb-theme/sass/base/typography/_typography.scss
@@ -1,3 +1,7 @@
+@use "../../abstracts/variables/colors" as *;
+@use "../../abstracts/variables/typography" as *;
+@use "headings" as *;
+
 body,
 button,
 input,
@@ -9,6 +13,3 @@ textarea {
 	font-size: 1rem;
 	line-height: $font__line-height-body;
 }
-
-@import "headings";
-@import "copy";
