--- a/wp-content/themes/airbnb-theme/sass/components/_components.scss
+++ b/wp-content/themes/airbnb-theme/sass/components/_components.scss
@@ -1,27 +1,27 @@
 /* Navigation
 --------------------------------------------- */
-@import "navigation/navigation";
+@use "navigation/navigation" as *;
 
 /* Posts and pages
 --------------------------------------------- */
-@import "content/posts-and-pages";
+@use "content/posts-and-pages" as *;
 
 /* Comments
 --------------------------------------------- */
-@import "comments/comments";
+@use "comments/comments" as *;
 
 /* Widgets
 --------------------------------------------- */
-@import "widgets/widgets";
+@use "widgets/widgets" as *;
 
 /* Media
 --------------------------------------------- */
-@import "media/media";
+@use "media/media" as *;
 
 /* Captions
 --------------------------------------------- */
-@import "media/captions";
+@use "media/captions" as *;
 
 /* Galleries
 --------------------------------------------- */
-@import "media/galleries";
+@use "media/galleries" as *;
