--- a/wp-content/themes/airbnb-theme/sass/components/navigation/_navigation.scss
+++ b/wp-content/themes/airbnb-theme/sass/components/navigation/_navigation.scss
@@ -75,6 +75,98 @@
 	display: block;
 }
 
+.site-header {
+	background: #fff;
+	border-bottom: 1px solid #eee;
+	padding: 1rem 0;
+  
+	.nav-container {
+	  max-width: 1200px;
+	  margin: 0 auto;
+	  padding: 0 1rem;
+	}
+  
+	.flex-wrapper {
+	  display: flex;
+	  align-items: center;
+	  justify-content: space-between;
+	  flex-wrap: wrap; // For mobile responsiveness
+	  gap: 1rem;
+	}
+  
+	.site-logo img {
+	  width:  50px;
+	  height: auto;
+	}
+  
+	.main-nav ul {
+	  display: flex;
+	  list-style: none;
+	  gap: 1.5rem;
+	  margin: 0;
+	  padding: 0;
+	}
+  
+	.main-nav a {
+	  text-decoration: none;
+	  color: #333;
+	  font-weight: 500;
+	}
+  
+	.search-box input,
+	.search-box button {
+	  margin-right: 0.5rem;
+	  padding: 0.4rem 0.8rem;
+	}
+  
+	.airbnb-your-home a {
+	  font-weight: bold;
+	  color: #ff385c;
+	}
+  
+	.profile-menu .profile-icon {
+	  font-size: 1.5rem;
+	  background: none;
+	  border: none;
+	  cursor: pointer;
+	}
+  }
+
+
+  /* Hide the dropdown by default */
+.experiences-dropdown.hidden {
+    display: none;
+}
+
+/* Show it when .hidden class is removed */
+.experiences-dropdown {
+    display: block;
+    position: absolute;
+    background-color: white;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+}
+
+/* Basic styling for dropdown items */
+.experiences-dropdown ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.experiences-dropdown ul li {
+    padding: 10px;
+}
+
+.experiences-dropdown ul li a {
+    text-decoration: none;
+    color: #333;
+}
+
+.experiences-dropdown ul li a:hover {
+    color: #007BFF;
+}
+  
 @media screen and (min-width: 37.5em) {
 
 	.menu-toggle {
