--- a/wp-content/themes/airbnb-theme/sass/style.scss
+++ b/wp-content/themes/airbnb-theme/sass/style.scss
@@ -51,7 +51,11 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 --------------------------------------------------------------*/
 
 // Import variables and mixins.
-@import "abstracts/abstracts";
+@use "abstracts/variables/colors" as *;
+@use "abstracts/variables/typography" as *;
+@use "abstracts/abstracts" as *;
+@use "base/typography/copy" as *;
+
 
 /*--------------------------------------------------------------
 # Generic
@@ -59,27 +63,29 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 /* Normalize
 --------------------------------------------- */
-@import "generic/normalize";
+@use "generic/normalize" as *;
 
 /* Box sizing
 --------------------------------------------- */
-@import "generic/box-sizing";
+@use "generic/box-sizing" as *;
 
 /*--------------------------------------------------------------
 # Base
 --------------------------------------------------------------*/
-@import "base/base";
+@use "base/base" as *;
 
 /*--------------------------------------------------------------
 # Layouts
 --------------------------------------------------------------*/
-// @import "layouts/content-sidebar"; // Uncomment this line for a sidebar on right side of your content.
-// @import "layouts/sidebar-content"; // Uncomment this line for a sidebar on left side of your content.
+// @use "layouts/content-sidebar"; // Uncomment this line for a sidebar on right side of your content.
+// @use "layouts/sidebar-content"; // Uncomment this line for a sidebar on left side of your content.
+
 
 /*--------------------------------------------------------------
-# Components
+# Navigation
 --------------------------------------------------------------*/
-@import "components/components";
+
+@use "components/navigation/navigation";
 
 /*--------------------------------------------------------------
 # Plugins
@@ -87,7 +93,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 /* Jetpack infinite scroll
 --------------------------------------------- */
-@import "plugins/jetpack/infinite-scroll";
+@use "plugins/jetpack/infinite-scroll" as *;
 
 /*--------------------------------------------------------------
 # Utilities
@@ -95,8 +101,10 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 /* Accessibility
 --------------------------------------------- */
-@import "utilities/accessibility";
+@use "utilities/accessibility" as *;
 
 /* Alignments
 --------------------------------------------- */
-@import "utilities/alignments";
+@use "utilities/alignments" as *;
+
+
