--- a/wp-content/themes/airbnb-theme/sass/utilities/_accessibility.scss
+++ b/wp-content/themes/airbnb-theme/sass/utilities/_accessibility.scss
@@ -1,3 +1,5 @@
+@use "../abstracts/variables/colors" as *;
+
 /* Text meant only for screen readers. */
 .screen-reader-text {
 	border: 0;
@@ -36,3 +38,4 @@
 #primary[tabindex="-1"]:focus {
 	outline: 0;
 }
+;
