--- a/wp-content/themes/airbnb-theme/sass/woocommerce.scss
+++ b/wp-content/themes/airbnb-theme/sass/woocommerce.scss
@@ -4,40 +4,42 @@ Theme Name: Airbnb Theme
 WooCommerce styles override
 */
 
+// Import variables and mixins
+@use "abstracts/abstracts" as *;
+
+/**
+ * Shop tables
+ */
+@use "plugins/woocommerce/tables" as *;
+
+/**
+ * Products
+ */
+@use "plugins/woocommerce/products" as *;
+
+/**
+ * Single product
+ */
+@use "plugins/woocommerce/single-product" as *;
+
+/**
+ * Checkout
+ */
+@use "plugins/woocommerce/checkout" as *;
+
+/**
+ * General WooCommerce components
+ */
+@use "plugins/woocommerce/components" as *;
+
+/**
+ * WooCommerce widgets
+ */
+@use "plugins/woocommerce/widgets" as *;
+
 // WooCommerce color variables
 $woocommerce__color-error: #e2401c;
 $woocommerce__color-success: #0f834d;
 $woocommerce__color-info: #3d9cd2;
 
-// Import variables and mixins
-@import "abstracts/abstracts";
 
-/**
- * Shop tables
- */
-@import "plugins/woocommerce/tables";
-
-/**
- * Products
- */
-@import "plugins/woocommerce/products";
-
-/**
- * Single product
- */
-@import "plugins/woocommerce/single-product";
-
-/**
- * Checkout
- */
-@import "plugins/woocommerce/checkout";
-
-/**
- * General WooCommerce components
- */
-@import "plugins/woocommerce/components";
-
-/**
- * WooCommerce widgets
- */
-@import "plugins/woocommerce/widgets";
